# explore-github-actions

./: LICENSE  README.md  app.py  pyproject.toml  test_app.py
.github/workflows/: ci.yaml
