[tool.poetry]
name = "explore-github-actions"
version = "0.1.0"
description = "simple codebase to test explore github actions."
authors = ["Ryan Ermita <ryan.ermita@uploan.ph>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
isort = "^5.1.1"
black = "^19.10b0"
mypy = "^0.782"
flake8 = "^3.8.3"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
